Bugfix b.02
Squashed Even More Bugs for Files not loading up properly, reorganized files into assets directory for easy access reads.

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 .range{
   background-color:#38373a;
   color:rgb(63, 63, 63);
-  background-image: url('/Assets/OIP.jfif'); 
+  background-image: url('./Assets/OIP.jfif'); 
   background-position: center center
   background-repeat no-repeat;
   background-attachment: fixed;
@@ -17,7 +17,7 @@
 .calc{
   background-color:#38373a;
   color:rgb(63, 63, 63);
-  background-image: url('/Assets/Windows11_green_wallpaper_3840x2160_4k.jpg'); 
+  background-image: url('./Assets/Windows11_green_wallpaper_3840x2160_4k.jpg'); 
   background-position: center center
   background-repeat no-repeat;
   background-attachment: fixed;
@@ -26,7 +26,7 @@
 .time{
   background-color:#38373a;
   color:rgb(63, 63, 63);
-  background-image: url('/Assets/R.jfif'); 
+  background-image: url('./Assets/R.jfif'); 
   background-position: center center
   background-repeat no-repeat;
   background-attachment: fixed;
